# home-assistant-green

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISASTER_RECOVERY.md  INTEGRATIONS.md  NEXT_STEPS.md  QUICK_START_SECRETS.md  README.md  STRAVA_COACH_SETUP.md  package.json  pyproject.toml
.claude/: settings.local.json
.claude/agents/: api-http-inspector.md  (+7 more)
.githooks/: README.md  pre-push
.github/: PR_DESCRIPTION.md  SECRETS_REQUIRED.md  dependabot.yml
.husky/: pre-push
ai-gateway/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.mac.yml  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.backup-20251128-012104  pyproject.toml
ai-gateway/.claude/plans/react-dashboard-multi-client/: phase-0-overview.md  phase-1-repository-setup.md  phase-10-documentation-testing.md  phase-2-configuration-abstraction.md  phase-3-client-branch-strategy.md  phase-4-environment-configuration.md  phase-5-api-config-endpoint.md  phase-6-dynamic-config-loading.md  phase-7-theme-system.md  phase-8-deployment-scripts.md  phase-9-docker-integration.md
ai-gateway/app/: __init__.py  main.py  models.py
ai-gateway/app/adapters/: __init__.py
ai-gateway/app/adapters/mock/: __init__.py  adapter.py  fixtures.py  state_store.py
ai-gateway/app/config/: features.py  mqtt_topics.py
ai-gateway/app/core/: __init__.py
ai-gateway/app/core/interfaces/: __init__.py  backend.py
ai-gateway/app/core/models/: __init__.py  action.py  capability.py  entity.py
ai-gateway/app/core/registry/: __init__.py  backend_registry.py  config.py  loader.py
ai-gateway/app/routers/: __init__.py  ask.py  client_config.py  conversation.py  dependencies.py  gateway.py  health.py  memory.py  session.py  tools.py  voice.py
ai-gateway/app/security/: secrets_manager.py  url_validator.py
ai-gateway/app/services/: __init__.py  backend_service.py  cache.py  circuit_breaker.py  config_loader.py  conversation_client.py  database.py  embeddings.py  entities.py  entity_discovery.py  ha_client.py  intent_matcher.py  llm_cache.py  llm_client.py  llm_tools.py  mqtt_client.py  ollama_client.py  openai_client.py  pattern_learner.py  stt_client.py  vosk_client.py  web_search.py  whisper_client.py
ai-gateway/app/services/learning/: __init__.py  context_engine.py  intent_analyzer.py  suggestion_engine.py
ai-gateway/app/services/pipeline/: __init__.py  executor.py  stt_pipeline.py
ai-gateway/app/services/tools/: __init__.py  base.py  control_light_tool.py  entity_tool.py  home_data_tool.py  media_control_tool.py  registry.py  research_tool.py  time_tool.py  web_search_tool.py  webview_tool.py
ai-gateway/app/utils/: __init__.py  json_validator.py  text.py
ai-gateway/config/: PERSONALITY.md  entities.yaml
ai-gateway/docs/: FALLBACK_PIPELINE.md
ai-gateway/migrations/: 001_initial_schema.sql  002_add_indexes.sql
ai-gateway/scripts/: backup.sh  benchmark.py  deploy.sh  init-ha-service.sh  restore.sh  rotate_secrets.sh  update.sh
ai-gateway/tests/: __init__.py  conftest.py  test_ha_client.py  test_intent_matcher.py  test_json_validator.py  test_llm_tools.py  test_models.py  test_web_search.py
ai-gateway/tests/mocks/: mqtt_client.py
ai-gateway/tests/routers/: test_conversation.py
ai-gateway/tests/security/: test_secrets_manager.py  test_url_validator.py
ai-gateway/tests/services/learning/: test_context_engine.py  test_intent_analyzer.py  test_suggestion_engine.py
ai-gateway/tests/services/tools/: test_control_light_tool.py  test_entity_tool.py  test_home_data_tool.py  test_media_control_tool.py  test_research_tool.py  test_time_tool.py  test_web_search_tool.py  test_webview_tool.py
config/: .yamllint  automations.yaml  configuration.yaml  secrets.yaml.example
data/: README.md
docs/: CONVERSATION_MODE_IMPLEMENTATION.md  DASHBOARD.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_PRODUCTION.md  GITHUB_SECRETS.md  INVENTORY.md  MIGRATION_GUIDE.md  MQTT_ARCHITECTURE.md  PERFORMANCE.md  REACT_DASHBOARD_PLAN.md  SECURITY.md  STREAMING_STT.md  STT_FINAL_RECOMMENDATION.md  STT_IMPLEMENTATION_COMPLETE.md  STT_IMPROVEMENT_PLAN.md  TAILSCALE_SETUP.md  TESTING.md  TROUBLESHOOTING.md  VOICE_WAKEWORD_ARCHITECTURE.md  WAKE_WORD_PROGRESS.md
ha-strava-coach/: .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION_EXAMPLE.yaml  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  example_automation.yaml  hacs.json  pyproject.toml
ha-strava-coach/.devcontainer/: devcontainer.json
ha-strava-coach/.github/workflows/: ci.yml
ha-strava-coach/custom_components/strava_coach/: __init__.py  config_flow.py  const.py  coordinator.py  sensor.py  strings.json
ha-strava-coach/custom_components/strava_coach/db/: __init__.py
ha-strava-coach/custom_components/strava_coach/llm/: __init__.py  adapter.py
ha-strava-coach/custom_components/strava_coach/metrics/: ctl_atl_tsb.py  readiness.py  stress.py  suggest_rules.py
ha-strava-coach/custom_components/strava_coach/translations/: en.json  pl.json
ha-strava-coach/docs/: PRIVACY.md  README.md  STRAVA_SETUP.md
ha-strava-coach/tests/: __init__.py  conftest.py  test_llm_guardrails.py  test_metrics.py
kiosk-service/: README.md  install.sh  kiosk-config.json  kiosk.service
matter-server/: README.md  docker-compose.yml
react-dashboard/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: build_inventory.py  deploy_local.sh  deploy_secrets.sh  deploy_via_ssh.sh  deploy_via_webhook.sh  diagnose_ssh.sh  git_push_with_ha_sync.sh  install_git_hooks.sh  pull_gui_changes.sh  pull_inventory.sh  reset-respeaker.service  reset-respeaker.sh  sync_from_ha.sh  sync_strava_coach.sh  validate_secrets.py
tests/: conftest.py  test_automations.py  test_config_validation.py  test_enterprise_example.py  test_integrations.py
wake-word-service/: Dockerfile  README.md  docker-compose.linux.yml  docker-compose.yml  entrypoint.sh  requirements.txt  run.sh
(+215 files in other folders)
