[project]
name = "ha-enterprise-starter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "homeassistant>=2024.7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
